--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,31 +4,53 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "4.2.7",
   "configurations",
-  
-  
-
-
-
-    
-    {
-      "name": "Python Debugger: Current File",
-      "type": "debugpy",
-      "request": "launch",
-      "program": "${file}",
-      "console": "integratedTerminal",
-      "configurations": [
-        {"name":"Python Debugger: Django","type":"debugpy","request":"launch","args":["runserver"],"django":true,"autoStartBrowser":false,"program":"${workspaceFolder}\\app\\manage.py"}
-        
-      
-      ]
-    },
-    {
-      "name": "Python Debugger: Django",
-      "type": "debugpy",
-      "request": "launch",
-      "args": ["runserver"],
-      "django": true,
+  {
+    "name": "Python Debugger: Current File",
+    "type": "debugpy",
+    "request": "launch",
+    "program": "${file}",
+    "console": "integratedTerminal",
+    "configurations": [
+      {
+        "name": "Debugpy Old: Django",
+        "type": "debugpy-old",
+        "request": "launch",
+        "program": "${workspaceFolder}\\manage.py",
+        "args": [
+          "runserver"
+        ],
+        "django": true,
+        "justMyCode": true
+      },
+      {
+        "name": "Attach to Chrome",
+        "port": 9222,
+        "request": "attach",
+        "type": "chrome",
+        "webRoot": "${workspaceFolder}"
+      },
+      {
+        "name": "Python Debugger: Django",
+        "type": "debugpy",
+        "request": "launch",
+        "args": [
+          "runserver"
+        ],
+        "django": true,
+        "autoStartBrowser": false,
+        "program": "${workspaceFolder}\\app\\manage.py"
+      }
+    ]
+  },
+  {
+    "name": "Python Debugger: Django",
+    "type": "debugpy",
+    "request": "launch",
+    "args": [
       "runserver"
-    }
-  ]
+    ],
+    "django": true,
+    "runserver"
+  }
+]
 }
